--- a/week2/index.html
+++ b/week2/index.html
@@ -5,6 +5,7 @@
         <title> Reggie's Coffee Shop - Home</title>
     </head>
     <body>
-
+        <h1> Reggie's Coffee Shop</h1>
+        Welcome to our shop
     </body>
 </html>
