--- a/week3/index.html
+++ b/week3/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
+
     <head>
         <meta charset="uft-8">
-        <title> Reggie's Coffee Shop - Home</title>
+        <title> Meto's Coffee Shop - Home</title>
     </head>
+
     <body>
-        <h1> Reggie's Coffee Shop</h1>
-        Welcome to our shop
+        <!-- This is a HTML comment
+         ctrl / to add comment
+         tagname + tab to complete the tag
+         command + right arrow to go to end of line
+         shift + right left arrow key to select characters
+        ctrl z to clean
+        -->
+        <header>
+            <h1>Meto's Coffee Shop</h1>
+        </header>
+        <!-- Main content of the page -->
+        <main>
+            <article>
+                <h2>Our Story</h2>
+                <p>
+                    We are a <em>family owned business</em>. Meto is the <abbr title="Chief Executive Officer">CEO</abbr>
+                    and head barista of the shop. Fefe is the pastry chef and is in-charge of the bake shop. Celebrating their 10 <sup>th</sup> anniversary together in December 2021
+                </p>
+                <blockquote> 
+                    We love coffee <cite>- Meto and Fefe</cite>
+                </blockquote>
+                <hr>
+
+                <section>
+                    <h3>Ottawa</h3>
+                    <p>
+                        We are a local coffee shop based in Ottawa. Our speciality is <b>organic fair-trade</b> coffee.
+                    </p>
+                </section>
+            <article>
+            <aside>
+                <h3>Merchandise</h3>
+
+            </aside>
+        </main>
+        <!-- Site footer -->
+        <footer>Copyright Meto's Coffee shop, 2021</footer>
+        
+        
     </body>
 </html>
