--- a/week3/index.html
+++ b/week3/index.html
@@ -39,8 +39,46 @@
             <article>
             <aside>
                 <h3>Merchandise</h3>
-
+                <!-- Adding unordered list for merchandise -->
+                <ul>
+                    <li> T-shirts</li>
+                    <li>Hats</li>
+                    <li> Hoodies</li>
+                </ul>
             </aside>
+            <!-- Adding section for the ordered list -->
+            <section>
+                <h3>Events</h3>
+                <ol>
+                    <li>June 23 <sup>rd</sup> - Coffee for Hope Foundation </li>
+                    <li>July <sup>th</sup> - Live Music</li>
+                </ol>
+            </section>
+            <!-- Adding section for the description list -->
+            <section>
+                <h3>Treat of the Week</h3>
+                <dl>
+                    <dt>Name</dt>
+                    <dd>Banana Bread</dd>
+                    <dt>Calories</dt>
+                    <dd>250</dd>
+                    <dt>Ingredients</dt>
+                    <dd>
+                        <ul>
+                            <li>all purpose flour </li>
+                            <li>baking soda</li>
+                            <li>baking powder</li>
+                            <li>salt</li>
+                            <li>butter</li>
+                            <li>sugar</li>
+                            <li>eggs</li>
+                            <li>lemon juice</li>
+                            <li>bananas</li>
+                        </ul>
+                    </dd>
+                </dl>
+                
+            </section>
         </main>
         <!-- Site footer -->
         <footer>Copyright Meto's Coffee shop, 2021</footer>
