Adds HTML entities

--- a/week3/index.html
+++ b/week3/index.html
@@ -81,7 +81,7 @@
             </section>
         </main>
         <!-- Site footer -->
-        <footer>Copyright Meto's Coffee shop, 2021</footer>
+        <footer>Copyright &copy; Meto's Coffee shop, 2021</footer>
         
         
     </body>
