--- a/html-assigment/index.html
+++ b/html-assigment/index.html
@@ -15,22 +15,26 @@
         <article>
             <h2>About Me</h2>
             <p>
-                I would like to introduce myself via this interesting assignment that has been provided.! I am from
+                My name is <b>Can Meto </b> and I would like to introduce myself via this interesting assignment that has been provided.! I am from
                 <em>Turkey</em>, and I have been living in <em>Canada</em> for 10 years now. I arrived at the age of 11 and am currently
                 21. I have been video editing for over 6 years now since a very young age and this is one of the main
                 hobbies that have made me choose this program.
+            </p>
+
+            <p>
 
                 I am currently also enrolled in <em>Carleton University</em>, Cognitive Science program with a minor in Computer
                 Science as a second-year student. This program is mainly interested in explaining the human mind using
                 psychology, linguistics, philosophy, neuroscience and translating these findings into computers. (Such
                 as artificial intelligence). I am looking to combine both of these knowledge in my line of work get the
-                best of both worlds since my passion has always been technology,
+                best of both worlds since my passion has always been technology.
 
-
-                <blockquote>
+               <blockquote>
                     "There is no faith and no courage and no sacrifice in doing what is expedient". <cite>-<abbr>Prof.</abbr> Jordan B. Peterson</cite>
-                </blockquote>
+                </blockquote> 
             </p>
+                
+            
         </article>
     </main>   
 
