--- a/week4/index.html
+++ b/week4/index.html
@@ -8,19 +8,32 @@
 
 <body>
     <!-- This is a HTML comment
-         ctrl / to add comment
-         tagname + tab to complete the tag
-         command + right arrow to go to end of line
-         shift + right left arrow key to select characters
+        ctrl / to add comment
+        tagname + tab to complete the tag
+        command + right arrow to go to end of line
+        shift + right left arrow key to select characters
         ctrl z to clean
-        -->
+    -->
     <header>
         <h1>Meto's Coffee Shop</h1>
+        <!-- Adding a navigation -->
+        <nav>
+            <ul>
+                <li> <a href = "index.html">Home </a> </li>            
+                <li> <a href= "contact.html"> Contact Us </a>  </li> 
+            </ul>
+        </nav> 
+       
     </header>
     <!-- Main content of the page -->
     <main>
+        <!-- Adding on page link -->
+        <a href="#treatofweek"> Treat of the Week</a>
         <article>
             <h2>Our Story</h2>
+            <!-- Adding Image -->
+            <img src = "images/coffee-shop.jpg" alt= "coffee cup on pile of coffee beans">
+
             <p>
                 We are a <em>family owned business</em>. Meto is the <abbr title="Chief Executive Officer">CEO</abbr>
                 and head barista of the shop. Fefe is the pastry chef and is in-charge of the bake shop. Celebrating
@@ -56,7 +69,7 @@
                     </ol>
                 </section>
                 <!-- Adding section for the description list -->
-                <section>
+                <section id= "treatofweek">
                     <h3>Treat of the Week</h3>
                     <dl>
                         <dt>Name</dt>
@@ -78,6 +91,9 @@
                             </ul>
                         </dd>
                     </dl>
+                    <!-- Adding external Link -->
+                    <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1
+                    " target="_blank">Get the Recipe</a>
 
                 </section>
     </main>
