--- a/week4/index.html
+++ b/week4/index.html
@@ -96,6 +96,34 @@
                     " target="_blank">Get the Recipe</a>
 
                 </section>
+                <!-- Adding section for menu -->
+                <section>
+                    <h3> Menu Specials</h3>
+                    <table border>
+                        <thead>
+                            <tr>
+                                <th colspan = "2">Items</th>
+                                <th rowspan="2">Price</th>
+                            </tr>
+                            <tr>
+                                <th>Name</th>
+                                <th>Calories</th>
+                            </tr>
+                        </thead>   
+                        <tbody>
+                            <tr>
+                                <td> Banana Bread</td>
+                                <td>2050</td>
+                                <td>&dollar;6</td>
+                            </tr>
+                            <tr>
+                                <td> Oatmeal</td>
+                                <td>110</td>
+                                <td>&dollar;8</td>
+                            </tr>
+                        </tbody>      
+                    </table>
+                </section>
     </main>
     <!-- Site footer -->
     <footer>Copyright &copy; Meto's Coffee shop, 2021</footer>
