adds css file and propreties

--- a/week5/index.html
+++ b/week5/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="uft-8">
     <title> Meto's Coffee Shop - Home</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -14,6 +15,7 @@
         shift + right left arrow key to select characters
         ctrl z to clean
     -->
+    
     <header>
         <h1>Meto's Coffee Shop</h1>
         <!-- Adding a navigation -->
@@ -28,7 +30,7 @@
     <!-- Main content of the page -->
     <main>
         <!-- Adding on page link -->
-        <a href="#treatofweek"> Treat of the Week</a>
+        <a href="#treatofweek" class="orange-link"> Treat of the Week</a>
         <article>
             <h2>Our Story</h2>
             <!-- Adding Image -->
@@ -39,7 +41,7 @@
                 and head barista of the shop. Fefe is the pastry chef and is in-charge of the bake shop. Celebrating
                 their 10 <sup>th</sup> anniversary together in December 2021
             </p>
-            <blockquote>
+            <blockquote class="large-text">
                 We love coffee <cite>- Meto and Fefe</cite>
             </blockquote>
             <hr>
@@ -93,13 +95,13 @@
                     </dl>
                     <!-- Adding external Link -->
                     <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1
-                    " target="_blank">Get the Recipe</a>
+                    " target="_blank" class="orange-link large-text">Get the Recipe</a>
 
                 </section>
                 <!-- Adding section for menu -->
                 <section>
                     <h3> Menu Specials</h3>
-                    <table border>
+                    <table >
                         <thead>
                             <tr>
                                 <th colspan = "2">Items</th>
