--- a/html-assigment/index.html
+++ b/html-assigment/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="uft-8">
     <title>Can Meto</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -19,8 +20,8 @@
     <main>
         <article>
             
-            <img src = "images/meto.png" alt= "Meto On the Balcony">
-            <h2>About Me</h2>
+            <img id= my-image src = "images/meto.png" alt= "Meto On the Balcony">
+            <h2 class="site-title"> About Me </h2>
             <p>
                 My name is <b>Can Meto </b> and I would like to introduce myself via this interesting assignment that has been provided.! I am from
                 <em>Turkey</em>, and I have been living in <em>Canada</em> for 10 years now. I arrived at the age of 11 and am currently
