--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- creates classes for both image and header to manipulate -->
     <div class="container">
         <header>
             <div class="image">
@@ -27,6 +28,7 @@
 
         <main>
             <article>
+                <!-- creates classes for both the box and title to manipulate -->
                 <h2 class="site-title"> Life Of a Starfish </h2>
                 <div class="imagecontainer">
                     <img id=my-image src="images/lone-starfish.jpg" alt="tiny starfish">
@@ -67,6 +69,7 @@
             <article>
                 <h3>Facts About Starfish</h3>
                 <aside>
+                    <!-- creates an unordered list -->
                     <ul>
                         <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
                         <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.
@@ -79,10 +82,11 @@
             </article>
 
             <section>
+                <!-- makes a container for the contact form -->
                 <h3>Contact to learn more</h3>
                 <div class="inputcontainer">
 
-
+                    <!-- crates  -->
                     <div>
                         <label for="fullname"> Your name</label>
                         <input type="text" id="fullname" name="fullname">
@@ -96,6 +100,7 @@
                         <textarea id="message" name="message"></textarea>
                     </div>
                     <div>
+                        <!-- adds radio type input -->
                         <h4>Would you like to visit the starfish?</h4>
                         <label for="yes">Yes</label>
                         <input type="radio" id="yes" name="past" value="yes">
