validates html code

--- a/final-project/indext.html
+++ b/final-project/indext.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -22,15 +22,15 @@
         <header class="nav">
             <img src="images/logo.png" alt="StarMediaLogo" class="logo">
             <nav class="main-nav">
-                <form action="search.html" method="get"></form>
+                <form action="search.html" method="get">
                     <ul class="nav-list">
                         <li> <a href="index.html" class="current">Home</a></li>
                         <li> <a href="#"> About Us</a></li>
                         <li><a href="#"> Services</a></li>
                         <li><a href="#">Team</a></li>
                         <li><a href="#"> Contact</a></li>
-                        <input type="text" id= "search" placeholder="Search..">
                     </ul>
+                    <input type="text" id= "search" placeholder="Search..">
                 </form>    
             </nav>
         </header>
